--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand text-uppercase" href="#">Crud Productos</a>
+      <a class="navbar-brand text-uppercase" href="#">Crud Productossss</a>
     
     </div>
   </nav>
